discussion/kv_engine/181094/181094_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[BP] MB-53586: Fix error path for get_scope_id

For unknown collection get_scope_id was returning an incorrectly
initialised EngineErrorGetScopeIDResult meaning the manifest-UID
used for lookup was not included (default of 0 was returned to
client). This commit could be back-ported if required.

Note that the changes to cb::EngineErrorGetScopeIDResult are
to be cleaned up in a subsequent change where get_scope_id(cid) is
replaced by a broader get_collection_meta function.

The updated test_app case highlighted that the usage of get_scope_id
occurred before the incoming key data had been validated by
is_document_key_valid, this is now addressed by incorporating
is_document_key_valid into verify_header

Change-Id: I3207981f4fc75e5f9b00a31a59592456eb8e0b90
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/179584
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
(cherry picked from commit 2592bd6f232feb86d80ea7141ba8443482e308e3)

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-24 15:15:41.000000000
Message: 
Patch Set 1: Cherry Picked from branch master.

The following files contain Git conflicts:
* daemon/mcbp_validators.cc
* engines/ep/src/ep_engine.cc
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-10-24 15:15:56.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/321356/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-24 15:19:04.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/381/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1545:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (29eef9 MB-51860: Merge remote-tracking branch "couchbase/cheshire-c)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1626:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (29eef9 MB-51860: Merge remote-tracking branch "couchbase/cheshire-c)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2203:66: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                                        PROTOCOL_BINARY_RAW_BYTES);
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:121:1: note: "verify_header" declared here
Status McbpValidator::verify_header(Cookie& cookie,
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2212:66: error: too few arguments to function call, expected 7, have 6 [clang-diagnostic-error]
                                        PROTOCOL_BINARY_RAW_BYTES);
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:121:1: note: "verify_header" declared here
Status McbpValidator::verify_header(Cookie& cookie,
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:2265:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (29eef9 MB-51860: Merge remote-tracking branch "couchbase/cheshire-c)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:1772:21: error: use of undeclared identifier "handle"; did you mean "cHandle"? [clang-diagnostic-error]
                    handle.getManifestUid());
                    ^~~~~~
                    cHandle
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:1765:18: note: "cHandle" declared here
            auto cHandle = vbucket->lockCollections(key);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:1774:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (29eef9 MB-51860: Merge remote-tracking branch "couchbase/cheshire-c)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:1787:58: error: use of undeclared identifier "cid" [clang-diagnostic-error]
    auto scopeIdInfo = engine->getKVBucket()->getScopeID(cid);
                                                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/381/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/mcbp_validators.cc:1545:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/381/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20687/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-10-25 10:41:56.000000000
Message: 
Abandoned

uploaded elsewhere
----------------------------------------------------------------------------------------------------------------------
